# YouTube_History_Analyzer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/youtube_history_analyzer/: classifier.py  cli.py  parser.py
tests/: test_classifier.py  test_parser.py  test_youtube_history_parser.py
